--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morning coffee</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <nav class="header__navigation">
+                <ul class="header__navigation-list">
+                    <li class="header__navigation-item"><a href="#" class="header__navigation-link_active">Home</a></li>
+                    <li class="header__navigation-item"><a href="#" class="header__navigation-link">About</a></li>
+                    <li class="header__navigation-item"><a href="#" class="header__navigation-link">Menu</a></li>
+                    <li class="header__navigation-item"><a href="#" class="header__navigation-link">Reservation</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
