End of header element

--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="header__container container">
             <nav class="header__navigation">
                 <ul class="header__navigation-list">
                     <li class="header__navigation-item"><a href="#" class="header__navigation-link_active">Home</a></li>
                     <li class="header__navigation-item"><a href="#" class="header__navigation-link">About</a></li>
                     <li class="header__navigation-item"><a href="#" class="header__navigation-link">Menu</a></li>
                     <li class="header__navigation-item"><a href="#" class="header__navigation-link">Reservation</a></li>
+                </ul>
+            </nav>
+            <div class="header__logo">
+                <img src="assets/images/Logo.svg" alt="Logo">
+            </div>
+            <nav class="header__menu">
+                <ul class="header__menu-list">
+                    <li class="header__menu-item"><a href="#" class="header__menu-link">Pages</a></li>
+                    <li class="header__menu-item"><a href="#" class="header__menu-link">Shop</a></li>
+                    <li class="header__menu-item"><a href="#" class="header__menu-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
